force-app/main/default/objects/OpportunityLineItem/fields/Balance_t__c.field-meta.xml
<CustomField>
    <fullName>Balance_t__c</fullName>
    <label>Balance t</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>