force-app/main/default/objects/OpportunityLineItem/fields/Cancel_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_reason__c</fullName>
    <label>Cancel reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Out of size range</fullName>
            </value>
            <value>
                <fullName>Out of steel grade</fullName>
            </value>
            <value>
                <fullName>Out of product range</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Cancelled by ERP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>