force-app/main/default/objects/OpportunityLineItem/fields/Cancel_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason_Details__c</fullName>
    <label>Cancel Reason Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>