force-app/main/default/objects/OpportunityLineItem/fields/CDD__c.field-meta.xml
<CustomField>
    <fullName>CDD__c</fullName>
    <description>Critical Date of Dispatch (the last date when the mill has to dispatch the products from the shop).</description>
    <inlineHelpText>Critical Date of Dispatch (the last date when the mill has to dispatch the products from the shop).</inlineHelpText>
    <label>CDD</label>
    <type>Date</type>
</CustomField>