force-app/main/default/objects/OpportunityLineItem/fields/CDDRecommended__c.field-meta.xml
<CustomField>
    <fullName>CDDRecommended__c</fullName>
    <label>Recommended CDD</label>
    <type>Date</type>
</CustomField>