force-app/main/default/objects/OpportunityLineItem/fields/Coating__c.field-meta.xml
<CustomField>
    <fullName>Coating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Type of coating that should be used for the product</description>
    <inlineHelpText>Type of coating that should be used for the product</inlineHelpText>
    <label>Coating</label>
    <referenceTo>CoatingType__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>