force-app/main/default/objects/OpportunityLineItem/fields/CoatingSpecification__c.field-meta.xml
<CustomField>
    <fullName>CoatingSpecification__c</fullName>
    <description>Coating specification information</description>
    <inlineHelpText>Coating specification information</inlineHelpText>
    <label>Coating Specification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>