force-app/main/default/objects/OpportunityLineItem/fields/FinalCDD__c.field-meta.xml
<CustomField>
    <fullName>FinalCDD__c</fullName>
    <formula>IF(ISBLANK(ConfirmedCDD__c), CDD__c, ConfirmedCDD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final CDD</label>
    <type>Date</type>
</CustomField>