force-app/main/default/objects/OpportunityLineItem/fields/FinDept__c.field-meta.xml
<CustomField>
    <fullName>FinDept__c</fullName>
    <description>A response from finance department to a price approval request.</description>
    <inlineHelpText>A response from finance department to a price approval request.</inlineHelpText>
    <label>Fin Dept Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Not reviewed</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>-1</fullName>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>