force-app/main/default/objects/OpportunityLineItem/fields/FinStatus__c.field-meta.xml
<CustomField>
    <fullName>FinStatus__c</fullName>
    <description>Status of opportunity item review by financial department.</description>
    <inlineHelpText>Status of opportunity item review by financial department.</inlineHelpText>
    <label>Fin Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>