force-app/main/default/objects/OpportunityLineItem/fields/InitialQuantity__c.field-meta.xml
<CustomField>
    <fullName>InitialQuantity__c</fullName>
    <description>Initial amount of product that was in client&apos;s inquiry (in metric tons).</description>
    <inlineHelpText>Initial amount of product that was in client&apos;s inquiry (in metric tons).</inlineHelpText>
    <label>Initial Quantity (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>