force-app/main/default/objects/OpportunityLineItem/fields/InquiryQuantity__c.field-meta.xml
<CustomField>
    <fullName>InquiryQuantity__c</fullName>
    <description>Quantity in customer&apos;s inquiry (in customer&apos;s measurement units).</description>
    <inlineHelpText>Quantity in customer&apos;s inquiry (in customer&apos;s measurement units).</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>