force-app/main/default/objects/OpportunityLineItem/fields/InquiryUnit__c.field-meta.xml
<CustomField>
    <fullName>InquiryUnit__c</fullName>
    <description>Measuring unit for the product in the customer&apos;s inquiry.</description>
    <inlineHelpText>Measuring unit for the product in the customer&apos;s inquiry.</inlineHelpText>
    <label>Measurement Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>34</fullName>
                <label>t</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>m</label>
            </value>
            <value>
                <fullName>74</fullName>
                <label>ft</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>pcs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>