force-app/main/default/objects/OpportunityLineItem/fields/InquiryUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>InquiryUnitPrice__c</fullName>
    <description>Product price per inquiry measurement unit.</description>
    <inlineHelpText>Product price per inquiry measurement unit.</inlineHelpText>
    <label>Price per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>