force-app/main/default/objects/OpportunityLineItem/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <description>Number of the related order item in the IT-Enterprise system.</description>
    <inlineHelpText>Number of the related order item in the IT-Enterprise system.</inlineHelpText>
    <label>ITE Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>