force-app/main/default/objects/OpportunityLineItem/fields/LengthMax_mm__c.field-meta.xml
<CustomField>
    <fullName>LengthMax_mm__c</fullName>
    <label>Length Max mm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>