force-app/main/default/objects/OpportunityLineItem/fields/LengthMin_mm__c.field-meta.xml
<CustomField>
    <fullName>LengthMin_mm__c</fullName>
    <label>Length Min mm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>