force-app/main/default/objects/OpportunityLineItem/fields/LengthSize__c.field-meta.xml
<CustomField>
    <fullName>LengthSize__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Tube length size</description>
    <inlineHelpText>Tube length size</inlineHelpText>
    <label>Length Size</label>
    <referenceTo>TubeLengthSize__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>