force-app/main/default/objects/OpportunityLineItem/fields/Liabilities_t__c.field-meta.xml
<CustomField>
    <fullName>Liabilities_t__c</fullName>
    <description>Our liabilities per ton of the product against customer.</description>
    <inlineHelpText>Our liabilities per ton of the product against customer.</inlineHelpText>
    <label>Liabilities (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>