force-app/main/default/objects/OpportunityLineItem/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>The difference between a product selling revenue and its cost of production, that is calculated by finance department in price approval process.</description>
    <inlineHelpText>The difference between a product selling revenue and its cost of production, that is calculated by finance department in price approval process.</inlineHelpText>
    <label>Total Margin (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>