force-app/main/default/objects/OpportunityLineItem/fields/Margin_t__c.field-meta.xml
<CustomField>
    <fullName>Margin_t__c</fullName>
    <description>The difference between a product 1 ton selling revenue and its cost of production, that is calculated by finance department in price approval process.</description>
    <inlineHelpText>The difference between a product 1 ton selling revenue and its cost of production, that is calculated by finance department in price approval process.</inlineHelpText>
    <label>Margin/t (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>