force-app/main/default/objects/OpportunityLineItem/fields/NPP_ERP__c.field-meta.xml
<CustomField>
    <fullName>NPP_ERP__c</fullName>
    <description>System field that keeps the row number in ERP system.</description>
    <inlineHelpText>Row number in ERP system.</inlineHelpText>
    <label>NPP in ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>