force-app/main/default/objects/OpportunityLineItem/fields/ProductionAllowed__c.field-meta.xml
<CustomField>
    <fullName>ProductionAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If production is allowed.</description>
    <inlineHelpText>If production is allowed.</inlineHelpText>
    <label>Production Allowed</label>
    <type>Checkbox</type>
</CustomField>