force-app/main/default/objects/OpportunityLineItem/fields/ProductSpecLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product standard specification level</description>
    <inlineHelpText>Product standard specification level</inlineHelpText>
    <label>Product Spec Level</label>
    <referenceTo>ProductSpecLevel__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>OpportunityProduct</relationshipName>
    <type>Lookup</type>
</CustomField>