force-app/main/default/objects/OpportunityLineItem/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Product type</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductTypes</valueSetName>
    </valueSet>
</CustomField>