force-app/main/default/objects/OpportunityLineItem/fields/Quantity_ft__c.field-meta.xml
<CustomField>
    <fullName>Quantity_ft__c</fullName>
    <description>Quantity in feet</description>
    <inlineHelpText>Quantity in feet</inlineHelpText>
    <label>Quantity (ft)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>