force-app/main/default/objects/OpportunityLineItem/fields/Quantity_lb__c.field-meta.xml
<CustomField>
    <fullName>Quantity_lb__c</fullName>
    <label>Quantity (lb)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>