force-app/main/default/objects/OpportunityLineItem/fields/Quantity_m__c.field-meta.xml
<CustomField>
    <fullName>Quantity_m__c</fullName>
    <description>Quantity in meters</description>
    <inlineHelpText>Quantity in meters</inlineHelpText>
    <label>Quantity (m)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>