force-app/main/default/objects/OpportunityLineItem/fields/Quantity_pcs__c.field-meta.xml
<CustomField>
    <fullName>Quantity_pcs__c</fullName>
    <description>Number of pieces of the product</description>
    <inlineHelpText>Number of pieces of the product</inlineHelpText>
    <label>Quantity (pcs)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>