force-app/main/default/objects/OpportunityLineItem/fields/QuotaType__c.field-meta.xml
<CustomField>
    <fullName>QuotaType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The type of quota that the item is related to.</description>
    <inlineHelpText>The type of production shop quota that the item is related to.</inlineHelpText>
    <label>Quota Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>QuotaType__c.Shop__c</field>
            <operation>equals</operation>
            <valueField>$Source.Shop__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>QuotaType__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>OpportunityProduct</relationshipName>
    <type>Lookup</type>
</CustomField>