force-app/main/default/objects/OpportunityLineItem/fields/Sales_Price_m__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_m__c</fullName>
    <label>Sales Price (per m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>