force-app/main/default/objects/OpportunityLineItem/fields/SCDept__c.field-meta.xml
<CustomField>
    <fullName>SCDept__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if there is response from supply chain department</description>
    <inlineHelpText>Supply chain department</inlineHelpText>
    <label>SC Dept</label>
    <type>Checkbox</type>
</CustomField>