force-app/main/default/objects/OpportunityLineItem/fields/ShipmentAllowed__c.field-meta.xml
<CustomField>
    <fullName>ShipmentAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether shipment of products is allowed.</description>
    <inlineHelpText>Whether shipment of products is allowed.</inlineHelpText>
    <label>Shipment Allowed</label>
    <type>Checkbox</type>
</CustomField>