force-app/main/default/objects/OpportunityLineItem/fields/ShippingPoint__c.field-meta.xml
<CustomField>
    <fullName>ShippingPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shipping point where to deliver products</description>
    <inlineHelpText>Shipping point where to deliver products</inlineHelpText>
    <label>Shipping Point</label>
    <referenceTo>ShippingPoint__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>