force-app/main/default/objects/OpportunityLineItem/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Production shop that will produce this product</description>
    <inlineHelpText>Production shop that will produce this product</inlineHelpText>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>