force-app/main/default/objects/OpportunityLineItem/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage of the current opportunity item</description>
    <inlineHelpText>Stage of the current opportunity item</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drafting</fullName>
                <default>true</default>
                <label>Commercial Dept</label>
            </value>
            <value>
                <fullName>Processing</fullName>
                <label>Tech &amp; Fin Evaluation</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <label>Confirmed by mill</label>
            </value>
            <value>
                <fullName>Produced</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
                <label>Delivered acc. INCOTERMS</label>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>