force-app/main/default/objects/OpportunityLineItem/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Steel grade</description>
    <inlineHelpText>Steel grade</inlineHelpText>
    <label>Steel Grade</label>
    <referenceTo>SteelGrade__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>