force-app/main/default/objects/OpportunityLineItem/fields/TechExp__c.field-meta.xml
<CustomField>
    <fullName>TechExp__c</fullName>
    <description>What is the conclusion of technical expertise</description>
    <inlineHelpText>What is the conclusion of technical expertise</inlineHelpText>
    <label>Tech Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Not reviewed</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>-1</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Not required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>