force-app/main/default/objects/OpportunityLineItem/fields/TubeEnds__c.field-meta.xml
<CustomField>
    <fullName>TubeEnds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tube ends</description>
    <inlineHelpText>Tube ends</inlineHelpText>
    <label>Ends</label>
    <referenceTo>TubeEnds__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>