force-app/main/default/objects/OpportunityLineItem/fields/TubeOD__c.field-meta.xml
<CustomField>
    <fullName>TubeOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tube outside diameter</description>
    <inlineHelpText>Tube outside diameter</inlineHelpText>
    <label>OD</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>