force-app/main/default/objects/OpportunityLineItem/fields/TubeWT__c.field-meta.xml
<CustomField>
    <fullName>TubeWT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tube wall thickness</description>
    <inlineHelpText>Tube wall thickness</inlineHelpText>
    <label>WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>