force-app/main/default/objects/OpportunityLineItem/fields/Typical__c.field-meta.xml
<CustomField>
    <fullName>Typical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Typical Assortment</label>
    <type>Checkbox</type>
</CustomField>