force-app/main/default/objects/OpportunityLineItem/fields/Weight_kpm__c.field-meta.xml
<CustomField>
    <fullName>Weight_kpm__c</fullName>
    <description>Pipe linear weight - kilograms per meter (kg/m)</description>
    <inlineHelpText>Pipe linear weight - kilograms per meter (kg/m)</inlineHelpText>
    <label>Linear Weight (kpm)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>