force-app/main/default/objects/OpportunityLineItem/fields/Weight_ppf__c.field-meta.xml
<CustomField>
    <fullName>Weight_ppf__c</fullName>
    <description>Pipe linear weight - pounds per foot (lb/ft)</description>
    <inlineHelpText>Pipe linear weight - pounds per foot (lb/ft)</inlineHelpText>
    <label>Linear Weight (ppf)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>