force-app/main/default/objects/OpportunityLineItem/fields/WheelContractLine__c.field-meta.xml
<CustomField>
    <fullName>WheelContractLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Contract Line</label>
    <referenceTo>WheelContractLine__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>