force-app/main/default/objects/OpportunityLineItem/fields/WheelDiameter__c.field-meta.xml
<CustomField>
    <fullName>WheelDiameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Diameter</label>
    <referenceTo>WheelDiameter__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>