force-app/main/default/objects/OpportunityLineItem/fields/WheelDrawing__c.field-meta.xml
<CustomField>
    <fullName>WheelDrawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Drawing</label>
    <referenceTo>WheelDrawing__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>