force-app/main/default/objects/OpportunityLineItem/fields/WheelHub__c.field-meta.xml
<CustomField>
    <fullName>WheelHub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Hub</label>
    <referenceTo>WheelHub__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>