force-app/main/default/objects/OpportunityLineItem/fields/WheelProductStandard__c.field-meta.xml
<CustomField>
    <fullName>WheelProductStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Standard</label>
    <referenceTo>WheelProductStandard__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>