force-app/main/default/objects/OpportunityLineItem/fields/WheelSteelGrade__c.field-meta.xml
<CustomField>
    <fullName>WheelSteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Steel Grade</label>
    <referenceTo>WheelSteelGrade__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>